--- a/student/staticwebapp.config.json
+++ b/student/staticwebapp.config.json
@@ -1,25 +1,9 @@
 {
-  "routes": [
-    {
-      "route": "/*",
-      "serve": "/index.html",
-      "statusCode": 200
-    }
-  ],
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/images/*.{png,jpg,gif}", "/css/*"]
+    "exclude": ["/images/*.{png,jpg,gif}", "/css/*", "/*.{js,css,png,jpg,gif,ico,svg,woff,woff2,ttf,eot}"]
   },
   "responseOverrides": {
-    "400": {
-      "rewrite": "/custom-error-pages/400.html"
-    },
-    "401": {
-      "rewrite": "/custom-error-pages/401.html"
-    },
-    "403": {
-      "rewrite": "/custom-error-pages/403.html"
-    },
     "404": {
       "rewrite": "/index.html"
     }
