--- a/student/staticwebapp.config.json
+++ b/student/staticwebapp.config.json
@@ -11,5 +11,12 @@
   },
   "platform": {
     "apiRuntime": "node:20"
-  }
+  },
+  "routes": [
+    {
+      "route": "/*",
+      "serve": "/index.html",
+      "statusCode": 200
+    }
+  ]
 }
