--- a/student/staticwebapp.config.json
+++ b/student/staticwebapp.config.json
@@ -15,8 +15,7 @@
   "routes": [
     {
       "route": "/*",
-      "serve": "/index.html",
-      "statusCode": 200
+      "serve": "/index.html"
     }
   ]
 }
